[workspace]
members = [
    "programs/cortex_token",
    "programs/cortex_private_sale",
    "programs/cortex_public_sale",
    "programs/cortex_vesting",
    "programs/cortex_staking"
]
exclude = [
    "programs/cortex",
    "programs/cortex_treasury",
    "programs/cortex_vault",
    "programs/cortex_strategy"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
