[workspace]
[package]
name = "cortex"
version = "0.1.0"
description = "Cortex AI Agent Registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cortex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
