[workspace]
[package]
name = "cortex_strategy"
version = "0.1.0"
description = "Cortex AI Strategy Execution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cortex_strategy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
