[workspace]
[package]
name = "cortex_treasury"
version = "0.1.0"
description = "Cortex Protocol Treasury"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cortex_treasury"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
